--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
   "name": "maritime-monitor",
-  "description": "Real-time maritime intelligence monitoring system with shipping, trade routes, piracy, weather, and policy tracking",
   "version": "1.0.0",
+  "description": "Real-time maritime intelligence platform with vessel tracking, weather monitoring, and security awareness",
   "type": "module",
-  "private": false,
-  "author": "Tom D'Eletto",
-  "license": "MIT",
+  "main": "src/main.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "typecheck": "tsc --noEmit",
     "preview": "vite preview",
-    "test": "node --test tests/**/*.test.mjs",
-    "test:data": "node --test tests/maritime-data.test.mjs",
-    "lint": "tsc",
-    "start": "npm run dev"
-  },
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.7",
-    "vite-plugin-pwa": "^1.2.0"
+    "lint": "eslint src --ext .ts,.tsx",
+    "format": "prettier --write src",
+    "type-check": "tsc --noEmit",
+    "setup-env": "bash scripts/setup-env.sh"
   },
   "dependencies": {
-    "@deck.gl/aggregation-layers": "^9.2.6",
-    "@deck.gl/core": "^9.2.6",
-    "@deck.gl/geo-layers": "^9.2.6",
-    "@deck.gl/layers": "^9.2.6",
-    "@deck.gl/mapbox": "^9.2.6",
-    "@upstash/redis": "^1.36.1",
-    "d3": "^7.9.0",
-    "deck.gl": "^9.2.6",
-    "maplibre-gl": "^5.16.0",
-    "topojson-client": "^3.1.0",
-    "node-fetch": "^3.3.0",
-    "xml2js": "^0.6.2"
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-fullscreen": "^3.0.0",
+    "lru-cache": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-draw": "^1.0.8",
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.7"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  }
+    "node": ">=18.0.0"
+  },
+  "author": "Tom D'Eletto",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tdeletto/maritime-monitor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tdeletto/maritime-monitor/issues"
+  },
+  "homepage": "https://github.com/tdeletto/maritime-monitor#readme"
 }
