--- a/package.json
+++ b/package.json
@@ -16,19 +16,26 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
-    "leaflet-fullscreen": "^3.0.0",
-    "lru-cache": "^10.0.0"
+    "leaflet-fullscreen": "^2.4.5",
+    "leaflet.markercluster": "^1.5.1",
+    "lru-cache": "^10.0.0",
+    "zustand": "^4.4.1",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-draw": "^1.0.8",
+    "@types/leaflet.markercluster": "^1.5.4",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.7"
+    "vite": "^5.0.7",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "engines": {
     "node": ">=18.0.0"
